<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/registration_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
        />

    </LinearLayout>

    <Button
        android:id="@+id/registration_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_short"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:id="@+id/registration_alignment_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/alignment_array"
        android:prompt="@string/prompt_alignment"
        android:gravity="center_horizontal|center_vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/registration_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_display_name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_above="@+id/registration_alignment_spinner"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/registration_retype_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_retype_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/registration_password"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/registration_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/email_login_form"
        android:layout_alignParentLeft="true" />
</RelativeLayout>
