<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="myriadchallenge.app.MainActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_display_name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/location_of_origin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_location_of_origin"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"/>

        <Button
            android:id="@+id/save_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/settings_save"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/cancel_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/settings_cancel"
            android:textStyle="bold"/>

    </LinearLayout>
</RelativeLayout>
