<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView android:id="@+id/quest_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center_horizontal|center_vertical"
    />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/message2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message2"
        />

        <TextView android:id="@+id/quest_alignment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/message3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message3"
        />

        <TextView android:id="@+id/quest_giver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
    </LinearLayout>

    <TextView android:id="@+id/message4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message4"
    />

    <TextView android:id="@+id/quest_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />

    <TextView android:id="@+id/message5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message5"
    />

    <fragment class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/map_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
    />

</LinearLayout>